--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "djs-template",
-  "description": "A template for a discord.js bot using bun and TypeScript.",
-  "homepage": "https://github.com/archasion/djs-template#readme",
+  "name": "Discord Bot Experimentation2",
+  "description": "Self-explanatory",
+  "homepage": "https://github.com/ValiantWind/DiscordBotExperimentation2#readme",
   "version": "1.0.0",
   "type": "module",
   "module": "src/index.ts",
-  "repository": "github:archasion/djs-template",
+  "repository": "github:valiantwind/DiscordBotExperimentation2",
   "author": {
-    "name": "Archasion",
-    "url": "https://github.com/archasion"
+    "name": "ValiantWind",
+    "url": "https://github.com/valiantwind"
   },
   "scripts": {
     "start": "bun src/index.ts"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "axios": "^1.6.7",
+    "bun": "^1.0.29",
+    "cloudblox": "^1.4.4",
+    "discord-api-types": "^0.37.71",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@types/bun": "^1.0.8",
     "bun-types": "^1.0.13"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
